--- a/package.json
+++ b/package.json
@@ -2,14 +2,24 @@
   "name": "ui",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://your-firebase-app-id.firebaseapp.com",
   "dependencies": {
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^11.4.0",
+    "framer-motion": "^12.5.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
